update api-gateway-service
