# docs/swagger.json
@@ -1,8 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample API on Kredit Plus Microservice.",
+        "title": "API Gateway Kredit Plus",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:5001",
+    "basePath": "/api/v1",
     "paths": {
         "/konsumen": {
             "post": {
@@ -17,6 +31,17 @@
                     "Kredit"
                 ],
                 "summary": "Create konsumen",
+                "parameters": [
+                    {
+                        "description": "Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateKonsumenRequestDto"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -40,6 +65,17 @@
                     "Kredit"
                 ],
                 "summary": "Create limit",
+                "parameters": [
+                    {
+                        "description": "Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateLimitRequestDto"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -102,6 +138,17 @@
                     "Kredit"
                 ],
                 "summary": "Create transaksi",
+                "parameters": [
+                    {
+                        "description": "Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateTransaksiRequestDto"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -153,6 +200,70 @@
         }
     },
     "definitions": {
+        "dto.CreateKonsumenRequestDto": {
+            "type": "object",
+            "required": [
+                "email",
+                "foto_ktp",
+                "foto_selfie",
+                "full_name",
+                "gaji",
+                "id_konsumen",
+                "legal_name",
+                "nik",
+                "password",
+                "tanggal_lahir",
+                "tempat_lahir"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "foto_ktp": {
+                    "type": "string"
+                },
+                "foto_selfie": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "gaji": {
+                    "type": "number",
+                    "minimum": 0
+                },
+                "id_konsumen": {
+                    "type": "string"
+                },
+                "legal_name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "nik": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "tanggal_lahir": {
+                    "type": "string"
+                },
+                "tempat_lahir": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                }
+            }
+        },
         "dto.CreateKonsumenResponseDto": {
             "type": "object",
             "required": [
@@ -164,6 +275,31 @@
                 }
             }
         },
+        "dto.CreateLimitRequestDto": {
+            "type": "object",
+            "required": [
+                "batas_kredit",
+                "id_konsumen",
+                "id_limit",
+                "tenor"
+            ],
+            "properties": {
+                "batas_kredit": {
+                    "type": "number",
+                    "minimum": 0
+                },
+                "id_konsumen": {
+                    "type": "string"
+                },
+                "id_limit": {
+                    "type": "string"
+                },
+                "tenor": {
+                    "type": "integer",
+                    "minimum": 0
+                }
+            }
+        },
         "dto.CreateLimitResponseDto": {
             "type": "object",
             "required": [
@@ -171,6 +307,62 @@
             ],
             "properties": {
                 "id_limit": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateTransaksiRequestDto": {
+            "type": "object",
+            "required": [
+                "admin_fee",
+                "id_konsumen",
+                "id_transaksi",
+                "jenis_transaksi",
+                "jumlah_bunga",
+                "jumlah_cicilan",
+                "nama_asset",
+                "nomor_kontrak",
+                "otr",
+                "tanggal_transaksi"
+            ],
+            "properties": {
+                "admin_fee": {
+                    "type": "number",
+                    "minimum": 0
+                },
+                "id_konsumen": {
+                    "type": "string"
+                },
+                "id_transaksi": {
+                    "type": "string"
+                },
+                "jenis_transaksi": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "jumlah_bunga": {
+                    "type": "number",
+                    "minimum": 0
+                },
+                "jumlah_cicilan": {
+                    "type": "number",
+                    "minimum": 0
+                },
+                "nama_asset": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "nomor_kontrak": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 0
+                },
+                "otr": {
+                    "type": "integer"
+                },
+                "tanggal_transaksi": {
                     "type": "string"
                 }
             }
